Bug 381415 - RDATE/EXDATE list is not considered; r=mvl